# ti-apps-launcher-fork

./: CMakeLists.txt  README.md
apps/: terminal.qml
configs/: am62xxsip-evm.h  am67-sk.h  am68-sk.h  am69-sk.h
